finished desktop site within requirements

--- a/index.html
+++ b/index.html
@@ -17,12 +17,21 @@
 
 <body>
 
- <!-- navigation code here -->
+  <section class='top-nav'>
+    <h1>SpaceWalkers</h1>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+      <a href="#">Sign In</a>
+    </nav>
+  </section>
 
   <div class="container home">
 
     <header class="intro">
-       <img src=
+       <img src="img/main-header.png">
 
       <h2>Lift Off</h2>
     
